Archive2/eb/75d6a63e7c4107/output
main.cpp: In function 'int main()':
main.cpp:175:17: error: 'num' was not declared in this scope
     std::cout<< num<<"\n";
                 ^
main.cpp:174:9: warning: unused variable 'Moved' [-Wunused-variable]
     int Moved = b0.size();
         ^
